--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "publisher": "bierner",
   "version": "0.0.1",
   "enabledApiProposals": [
-    "documentPaste",
-    "languageModels"
+    "documentPaste"
   ],
   "engines": {
-    "vscode": "^1.86.0"
+    "vscode": "^1.90.0"
   },
   "categories": [
     "Other"
@@ -19,25 +18,36 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "commands": [
+      {
+        "command": "smartPaste.paste",
+        "title": "✨ Smart Paste"
+      }
+    ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "smartPaste.paste",
+          "when": "!editorReadonly"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "lint": "eslint src --ext ts"
   },
   "devDependencies": {
-    "@types/vscode": "^1.86.0",
-    "@types/mocha": "^10.0.2",
+    "@types/vscode": "^1.90.0",
     "@types/node": "18.x",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
     "glob": "^10.3.3",
-    "mocha": "^10.2.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.5",
     "@vscode/test-electron": "^2.3.4"
   }
 }
